test/io/vass/channel-access-after-close-error.good
channel-access-after-close-error.chpl:4: error: writing to a channel after it has been closed
