test/io/vass/channel-access-after-close-error.chpl
const fi = openmem();
const ch = fi.writer();
ch.close();
ch.write("hi");
